getting started with js

--- a/#src/hard.html
+++ b/#src/hard.html
@@ -11,6 +11,9 @@
     <link rel="icon" type="image\png" sizes="32x32" href="ico\favicon-32x32.png">
     <link rel="icon" type="image\png" sizes="16x16" href="ico\favicon-16x16.png">
     <link rel="manifest" href="ico\site.webmanifest">
+    <!-- MathJax eубрал async! -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script"  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   </head>
   <body id="body">
     <div id="preloaderOverlay" class="preloader--overlay">
@@ -194,8 +197,9 @@
           </p>
         </div>
       </footer>
-    <script src="js\script.min.js"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
+
+    <script src="js\script.min.js" ></script>
+
   </body>
 </html>
