--- a/#src/index.html
+++ b/#src/index.html
@@ -67,6 +67,7 @@
     </div>
   </section>
   <section class="phone" >
+    <h2>Готовьтесть к 17 заданию даже на мобильном устройстве!</h2>
     <div class="container">
       <div class="phone__container">
         <img class="phone__item phone__item1" src="img\main\phone1.png" alt="">
@@ -77,6 +78,7 @@
 
     </div>
   </section>
+
   <section class="opportunities">
     <div class="container">
       <div class="opportunities__item">
