--- a/#src/index.html
+++ b/#src/index.html
@@ -66,17 +66,15 @@
       </div>
     </div>
   </section>
+
   <section class="phone" >
-    <h2>Готовьтесть к 17 заданию даже на мобильном устройстве!</h2>
-    <div class="container">
+      <h2>Готовmтесь к 17 заданию даже на мобильном устройстве!</h2>
       <div class="phone__container">
         <img class="phone__item phone__item1" src="img\main\phone1.png" alt="">
         <img class="phone__item phone__item2" src="img\main\phone2.png" alt="">
         <img class="phone__item phone__item3" src="img\main\phone3.png" alt="">
 
       </div>
-
-    </div>
   </section>
 
   <section class="opportunities">
