--- a/index.html
+++ b/index.html
@@ -1,1 +1,167 @@
-<!DOCTYPE html><html lang="ru" dir="ltr">  <head>    <meta charset="utf-8">    <meta name="viewport" content="width=device-width, initial-scale=1">    <title>Главная</title>    <!-- <link rel="stylesheet" href="libs/font-awesome/fontawesome.min.css"> -->    <link rel="stylesheet" href="css/style.min.css">    <!-- ico -->    <link rel="apple-touch-icon" sizes="180x180" href="ico\apple-touch-icon.png">    <link rel="icon" type="image\png" sizes="32x32" href="ico\favicon-32x32.png">    <link rel="icon" type="image\png" sizes="16x16" href="ico\favicon-16x16.png">    <link rel="manifest" href="ico\site.webmanifest">    <!-- fontawesome -->    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet"> </head>  <body id="body">    <div id="preloaderOverlay" class="preloader--overlay">  <div class="preloader"></div></div><nav>  <div class="nav--mobile" >    <div class="nav__content" id="nav__content">      <div class="container">        <a class="logo" href="index.html">a</a>        <a class="nav__item " href="index.html">Главная</a>        <a class="nav__item" href="easy.html">легкие</a>        <a class="nav__item" href="medium.html">средние</a>        <a class="nav__item" href="hard.html">сложные</a>        <a class="nav__item" href="theoreticalMaterial.html">теория</a>        <!-- <a class="nav__item" href="#">о нас</a> -->        <!-- <button class="nav__item nav__button button" type="button" name="button">Log In</button> -->      </div>    </div>    <a href="#" class="menu-btn" id="menu-btn" onclick="burger()">      <span></span>    </a>  </div></nav>  <main>    <div class="container">      <header class="main__header">        <h1>Мы поможем вам изучить параметры</h1>        <p>Разбор задач с параметром, тригонометрическими функциями, с системами и по возможности с несколькими вариантами решения</p>      </header>    </div>  </main>  <section class="difficulty">    <div class="container">      <article class="difficulty__item">        <a href="easy.html"><picture><source srcset="img\difficulty\briefcase.svg" type="image/webp"><img src="img\difficulty\briefcase.svg" alt=""></picture></a>        <h3>Лёгкие</h3>        <p>Уравнения с параметром</p>        <p>Неравенства с параметром</p>        <p>Системы с параметром </p>        <p>и др.</p>        <a href="easy.html">Начать</a>      </article>      <article class="difficulty__item">        <a href="medium.html"><picture><source srcset="img\difficulty\tool.svg" type="image/webp"><img src="img\difficulty\tool.svg" alt=""></picture></a>        <h3>Средние</h3>        <p>Расположение корней квадратного трехчлена</p>        <p>Использование симметрий</p>        <p>Использование монотонности, оценок</p>        <p>и др.</p>        <a href="medium.html">Начать</a>      </article>      <article class="difficulty__item">        <a href="hard.html"><picture><source srcset="img\difficulty\lifeBuoy.svg" type="image/webp"><img src="img\difficulty\lifeBuoy.svg" alt=""></picture></a>        <h3>Тяжёлые</h3>        <p>Аналитическое решение уравнений, неравенств, систем</p>        <p>Координаты (x, a)</p>        <p>Уравнение окружности</p>        <a href="hard.html">Начать</a>      </article>    </div>  </section>  <section class="pueChart">    <div class="container">      <div class="pueChart__title">        <h2>Ответ на вопрос "будете ли вы решать задание с параметром на ЕГЭ?" </h2>        <small>примите участие в опросе, чтобы получить более точные данные (данные на сайт заполняются в ручную)</small>        <button><a target="_blank" href="https://forms.gle/XyqhhxicYVq76vRs7">опрос</a> </button>        <!-- <button  type="button" name="button"><a target="_blank" href="https://forms.gle/XyqhhxicYVq76vRs7">опрос</a></button> -->      </div>      <div class="pueChart__pueChar">        <canvas  width="400px" height="600px"  id="pueChart" ></canvas>      </div>    </div>  </section>  <section class="opportunities">    <div class="container">      <div class="opportunities__item">        <picture><source srcset="img\opportunities\briefcase.svg" type="image/webp"><img src="img\opportunities\briefcase.svg" alt=""></picture>        <p>весь контент очень доступен</p>      </div>      <div class="opportunities__item">        <picture><source srcset="img\opportunities\key.svg" type="image/webp"><img src="img\opportunities\key.svg" alt=""></picture>        <p>вы узнаете ключевые моменты в решении задач с параметром</p>      </div>      <div class="opportunities__item">        <picture><source srcset="img\opportunities\box.svg" type="image/webp"><img src="img\opportunities\box.svg" alt=""></picture>        <p>материал постояно обновляется</p>      </div>      <div class="opportunities__item">        <picture><source srcset="img\opportunities\creditCard.svg" type="image/webp"><img src="img\opportunities\creditCard.svg" alt=""></picture>        <p>это всё бесплатно</p>      </div>    </div>  </section>  <footer>  <div class="footer__item">    <h4>Разработка и дизайн сайта:</h4>    <p>Цуканников Кирилл <a href="https://github.com/topi768"><i class="fab fa-github"></i></a><a href="https://vk.com/id457776760"><i class="fab fa-vk"></i></a></p>    <p>      <a target="_blank" href="https://forms.gle/yUb6YHzk8axmG4U26">Ваши пожелания</a>    </p>  </div></footer>    <script src="js\script.min.js"></script>    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>    <script>      let pueChart = document.querySelector('#pueChart').getContext('2d');      pueChart.canvas.parentNode.style.height = '600px';      pueChart.canvas.parentNode.style.width = '50%';      let myChart = new Chart(pueChart, {        type: 'pie',        data: {          labels: ['да, я собираюсь', 'не буду  их решать','не сдаю профиль'] ,          datasets: [{            data: [10, 6, 2],            backgroundColor: [              '#6bd95a',              '#4276d7',              '#cf4d4d',            ],            // borderColor: [            //   '#4d74bd'            // ],            // borderWidth: 2          }]        },        options: {          maintainAspectRatio: false,          layout: {              padding: {                  // left: 50              }          }        }      })    </script>  </body></html>
+<!DOCTYPE html>
+<html lang="ru" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Главная</title>
+    <!-- <link rel="stylesheet" href="libs/font-awesome/fontawesome.min.css"> -->
+    <link rel="stylesheet" href="css/style.min.css">
+    <!-- ico -->
+    <link rel="apple-touch-icon" sizes="180x180" href="ico\apple-touch-icon.png">
+    <link rel="icon" type="image\png" sizes="32x32" href="ico\favicon-32x32.png">
+    <link rel="icon" type="image\png" sizes="16x16" href="ico\favicon-16x16.png">
+    <link rel="manifest" href="ico\site.webmanifest">
+    <!-- fontawesome -->
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
+ </head>
+  <body id="body">
+    <div id="preloaderOverlay" class="preloader--overlay">
+  <div class="preloader"></div>
+</div>
+<nav>
+  <div class="nav--mobile" >
+    <div class="nav__content" id="nav__content">
+      <div class="container">
+        <a class="logo" href="index.html">a</a>
+        <a class="nav__item " href="index.html">Главная</a>
+        <a class="nav__item" href="easy.html">легкие</a>
+        <a class="nav__item" href="medium.html">средние</a>
+        <a class="nav__item" href="hard.html">сложные</a>
+        <a class="nav__item" href="theoreticalMaterial.html">теория</a>
+        <!-- <a class="nav__item" href="#">о нас</a> -->
+        <!-- <button class="nav__item nav__button button" type="button" name="button">Log In</button> -->
+      </div>
+    </div>
+    <a href="#" class="menu-btn" id="menu-btn" onclick="burger()">
+      <span></span>
+    </a>
+  </div>
+</nav>
+
+  <main>
+    <div class="container">
+      <header class="main__header">
+        <h1>Мы поможем вам изучить параметры</h1>
+        <p>Разбор задач с параметром, тригонометрическими функциями, с системами и по возможности с несколькими вариантами решения</p>
+      </header>
+    </div>
+  </main>
+  <section class="difficulty">
+    <div class="container">
+      <article class="difficulty__item">
+        <a href="easy.html"><img src="img\difficulty\briefcase.svg" alt=""></a>
+        <h3>Лёгкие</h3>
+        <p>Уравнения с параметром</p>
+        <p>Неравенства с параметром</p>
+        <p>Системы с параметром </p>
+        <p>и др.</p>
+        <a href="easy.html">Начать</a>
+      </article>
+      <article class="difficulty__item">
+        <a href="medium.html"><img src="img\difficulty\tool.svg" alt=""></a>
+        <h3>Средние</h3>
+        <p>Расположение корней квадратного трехчлена</p>
+        <p>Использование симметрий</p>
+        <p>Использование монотонности, оценок</p>
+        <p>и др.</p>
+        <a href="medium.html">Начать</a>
+      </article>
+      <article class="difficulty__item">
+        <a href="hard.html"><img src="img\difficulty\lifeBuoy.svg" alt=""></a>
+        <h3>Тяжёлые</h3>
+        <p>Аналитическое решение уравнений, неравенств, систем</p>
+        <p>Координаты (x, a)</p>
+        <p>Уравнение окружности</p>
+        <a href="hard.html">Начать</a>
+      </article>
+    </div>
+  </section>
+  <section class="pueChart">
+    <div class="container">
+      <div class="pueChart__title">
+        <h2>Ответ на вопрос "будете ли вы решать задание с параметром на ЕГЭ?" </h2>
+        <small>примите участие в опросе, чтобы получить более точные данные (данные на сайт заполняются в ручную)</small>
+        <button><a target="_blank" href="https://forms.gle/XyqhhxicYVq76vRs7">опрос</a> </button>
+      </div>
+      <div class="pueChart__pueChar">
+        <canvas  width="400px" height="600px"  id="pueChart" ></canvas>
+      </div>
+    </div>
+  </section>
+
+  <section class="phone" >
+      <h2>Готовmтесь к 17 заданию даже на мобильном устройстве!</h2>
+      <div class="phone__container">
+        <img class="phone__item phone__item1" src="img\main\phone1.png" alt="">
+        <img class="phone__item phone__item2" src="img\main\phone2.png" alt="">
+        <img class="phone__item phone__item3" src="img\main\phone3.png" alt="">
+
+      </div>
+  </section>
+
+  <section class="opportunities">
+    <div class="container">
+      <div class="opportunities__item">
+        <img src="img\opportunities\briefcase.svg" alt="">
+        <p>весь контент очень доступен</p>
+      </div>
+      <div class="opportunities__item">
+        <img src="img\opportunities\key.svg" alt="">
+        <p>вы узнаете ключевые моменты в решении задач с параметром</p>
+      </div>
+      <div class="opportunities__item">
+        <img src="img\opportunities\box.svg" alt="">
+        <p>материал постояно обновляется</p>
+      </div>
+      <div class="opportunities__item">
+        <img src="img\opportunities\creditCard.svg" alt="">
+        <p>это всё бесплатно</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+  <div class="footer__item">
+    <h4>Разработка и дизайн сайта:</h4>
+    <p>Цуканников Кирилл <a href="https://github.com/topi768"><i class="fab fa-github"></i></a><a href="https://vk.com/id457776760"><i class="fab fa-vk"></i></a></p>
+    <p>
+      <a target="_blank" href="https://forms.gle/yUb6YHzk8axmG4U26">Ваши пожелания</a>
+    </p>
+  </div>
+</footer>
+
+    <script src="js\script.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+      let pueChart = document.querySelector('#pueChart').getContext('2d');
+      pueChart.canvas.parentNode.style.height = '600px';
+      pueChart.canvas.parentNode.style.width = '50%';
+      let myChart = new Chart(pueChart, {
+        type: 'pie',
+        data: {
+          labels: ['да, я собираюсь', 'не буду  их решать','не сдаю профиль'] ,
+          datasets: [{
+            data: [10, 6, 2],
+            backgroundColor: [
+              '#6bd95a',
+              '#4276d7',
+              '#cf4d4d',
+            ],
+            // borderColor: [
+            //   '#4d74bd'
+            // ],
+            // borderWidth: 2
+          }]
+        },
+        options: {
+          maintainAspectRatio: false,
+          layout: {
+              padding: {
+                  // left: 50
+              }
+          }
+        }
+
+      })
+    </script>
+  </body>
+</html>
