--- a/#src/theoreticalMaterial.html
+++ b/#src/theoreticalMaterial.html
@@ -21,9 +21,12 @@
     <section class="content">
       <div class="container">
         <article>
-          <h2>лёгкие</h2>
+          <!-- <h2>лёгкие</h2> -->
           <h3>Линейные уравнения</h3>
           <p>Линейные уравнения, неравенства и системы линейных уравнений относятся к числу самых простых задач с параметрами. Поэтому задачи этого раздела являются подготовительными заданиями к решению реальных задач с параметрами, предлагаемых на ЕГЭ.</p>
+          <a href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
+        </article>
+        <article>
           <h3>Исследование дискриминанта</h3>
           <p>Решение многих задач с параметрами сводится к исследованию
             квадратного трехчлена. Для решение некоторых задач этого вида достаточно
@@ -46,7 +49,8 @@
             $$
             <p><strong>Факт 1:</strong> Для того чтобы корни квадратного трехчлена имели
               одинаковые знаки, необходимо и достаточно выполнения соотношений</p>
-              $$ D = b^2 - 4ac	\geq 0, \qquad x_1 * x_2 = \frac{c}{a} > 0;$$
+              $$ D = b^2 - 4ac	\geq 0, $$
+              $$ x_1 * x_2 = \frac{c}{a} > 0;$$
               <p>при этом оба корня положительны, если дополнительно выполняется условие</p>
               $$ x_1 + x_2 = \frac{c}{a} > 0;$$
               <p>и оба корня будут отрицательны, если</p>
@@ -54,11 +58,25 @@
               <p><strong>Факт 2:</strong>Для того чтобы корни квадратного трехчлена имели разные
                 знаки, необходимо и достаточно выполнения соотношения </p>
                 $$ x_1 * x_2 = \frac{c}{a} < 0;$$
+              <a href="https://math100.ru/prof-ege_2022_17-2/">источник</a>
         </article>
         <article>
-          <h2>средние</h2>
-          <h3>Графический метод.Решение квадратного уравнения с параметром графическим методом</h3>
-          <p>Пример 1 – найти число корней уравнения в зависимости от параметра а:</p>
+          <!-- <h2>средние</h2> -->
+          <h3>монотонность</h3>
+          <p><em>Определение</em> 1: Функция называется возрастающей на интервале (a ; b), если большему значению аргумента соответствует большее значение функции, т.е. для любой пары \( x_1, x_2 ∈ (a,b)\) таких, что  \( x_1 > x_2 \) справедливо неравенство  \( f(x_1) > f ( x_2) \). </p>
+          <p><em>Определение</em> 2: Функция называется возрастающей на интервале (a ; b), если большему значению аргумента соответствует меньшее значение функции, т.е. для любой пары \( x_1, x_2 ∈ (a,b)\) таких, что  \( x_1 > x_2 \) справедливо неравенство  \( f(x_1) < f ( x_2) \). </p>
+          <p><em>Определение</em> 3: Функция называется монотонной на интервале, если она на этом интервале или возрастает, или убывает. </p>
+          <p> <em>Необходимые условия возрастания (убывания) функции:</em> если дифференцируемая функция  \( f(x) \) возрастает (убывает) на интервале  \( (a; b) \), то  \( f'(x) \geq 0\) – убывает.</p>
+          <p> <strong>Утверждение 1. </strong> Если функция  \( y = f(x) \) монотонна, то уравнение \( f(x) = A \) (где А – любое действительное число) имеет не более одного корня.</p>
+          <p> <strong>Утверждение 2. </strong> Если функция  возрастает, а функция монотонна возрастает, а функция  \( y = g(x) \) монотонно убывает, то уравнение  \( f(x)= g(x) \) имеет не более одного корня.</p>
+          <p>С помощью утверждений 1 и 2 можно обосновать единственность решения уравнения в тех случаях, когда решить его стандартными способами не представляется возможным, но при этом удается подобрать корень уравнения, который, как правило, является целым числом. При этом надо учитывать, что решение уравнения «методом подбора» не будет засчитано при проверке без обоснования того, что уравнение не имеет других корней. Такое обоснование часто удается сделать, опираясь на свойства монотонности функций.</p>
+
+          <a href="https://math100.ru/prof-ege_2022_17-6/">источник</a>
+        </article>
+        <article>
+          <!-- <h2>сложные</h2> -->
+          <h3>Графический метод. Решение квадратного уравнения с параметром графическим методом</h3>
+          <p>Пример – найти число корней уравнения в зависимости от параметра а:</p>
           $$x(x - 1) = a$$
           <p>Согласно постановке задачи нам не нужно находить значения корней, а только их количество, решаем задачу графическим методом.</p>
           <p>
@@ -73,6 +91,60 @@
           <figcaption>$$y = x(x - 1)$$</figcaption>
           <p>Глядя на график, выписываем ответ: при a < -0.25 решений нет, при a = -0.25 уравнение имеет единственное решение;
             при a > -0.25 уравнение имеет два решения.</p>
+          <a href="https://interneturok.ru/lesson/algebra/11-klass/uravneniya-i-neravenstva-sistemy-uravneniy-i-neravenstv/graficheskiy-metod-v-zadachah-s-parametrom-prodolzhenie-resheniya-zadach">источник</a>
+        </article>
+        <article>
+          <h3>Модуль</h3>
+          <p> <strong>Пример задачи с модулем: </strong> Найти все значения параметра а, при которых неравенство \( | x^2 - 2x + a | > 5 \) не имеет решений на отрезке [-1;2]</p>
+          <p>Тогда  \(
+             \begin{equation*}
+                 \begin{cases}
+                   x^2 - 2x + a \leq 5  \\
+                   x^2 - 2x + a ≥ 5
+                 \end{cases}
+                \end{equation*}
+                \)
+          </p>
+          <p> $$
+             \begin{equation*}
+                 \begin{cases}
+                   x^2 - 2x + a  - 5 \leq 0  \\
+                   x^2 - 2x + a + 5≥ 0
+                 \end{cases}
+                \end{equation*}
+                $$
+          </p>
+          <p>Ситуация существенно упрощается тем, что минимум функции в обоих неравенствах в точке х=1, т.е. попадает на рассматриваемый отрезок. </p>
+          <p>Тогда первое неравенство будет выполнено на этом отрезке если  \(
+              \begin{equation*}
+                \begin{cases}
+                  f(-1) \leq 0  \\
+                  f(2) \leq 0
+                  \end{cases}
+                  \end{equation*}
+              \) </p>
+              $$
+              \begin{equation*}
+                \begin{cases}
+                  1 + 2 + a - 5 \leq 0  \\
+                  4 - 4 + a - 5 \leq 0
+                  \end{cases}
+                \end{equation*}
+              $$
+              $$
+              \begin{equation*}
+                \begin{cases}
+                  a \leq 2  \\
+                  a \leq 5
+                  \end{cases}
+                \end{equation*}
+              $$
+              $$ a \leq 2  $$
+              <p>Со вторым неравенством еще проще – достаточно условия \( D \leq 0 \) </p>
+              $$ 4 - 4a - 20 \leq 0; $$
+              $$ a \geq 0; $$
+              <p>Ответ:  \( [-4; 2] \) </p>
+          <a href="https://alexlarin.net/param/p32.html">источник</a>
         </article>
       </div>
     </section>
