--- a/#src/medium.html
+++ b/#src/medium.html
@@ -20,7 +20,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-            <small><a href="#">монотонность</a></small>
+            <small><a href="theoreticalMaterial.html#Монотонность">Монотонность</a></small>
             <p class="task__text">Найдите наименьшее значение параметра а, при котором функция является неубывающей на всей числовой прямой</p>
             <p class="task__formula">$$ y = 9 + 7x - 3| ax + 2 | + | ax + 5 | + | x + 1 | $$</p>
           </div>
@@ -79,7 +79,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 2</h2>
-            <small><a href="#"> Уравнение с модулем</a></small>
+            <small><a href="theoreticalMaterial.html#Модуль">Модуль</a></small>
             <p class="task__text">Найдите все значения а, при каждом из которых уравнение имеет единственный корень. </p>
             <p class="task__formula">$$x^2 + (a - 3)^2 = | x + 3 - a | | x + a - 3 |$$</p>
           </div>
@@ -100,7 +100,6 @@
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
             <p>
-
               $$  \textnormal {если}   \; x_0   \textnormal{является корнем исходного уравнения, то и}  $$
               $$   \; -x_0 \;  \textnormal{является его корнем. Значит,}$$
               $$ \textnormal{исходное уравнение имеет единственный корень,} $$
@@ -124,8 +123,6 @@
               $$ \textnormal{При > 2 получаем уравнение } x^2 - 2x + 4 = 0 $$
               $$ \textnormal{которое не имеет корней. При a = 1 и при a = 5} $$
               $$\textnormal{исходное уравнение имеет единственный корень.} $$
-
-
             </p>
           </div>
         </div>
@@ -134,7 +131,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
-            <small><a href="#">система координат x и a</a></small>
+            <small><a href="theoreticalMaterial.html#ГрафическийМетод">Графический метод</a></small>
             <p class="task__text">найдите при каких a  ур-е умеет 3 корня</p>
             <p class="task__formula">$$x^2-8x=2| x-a | - 16$$</p>
           </div>
