--- a/#src/easy.html
+++ b/#src/easy.html
@@ -13,7 +13,6 @@
     <link rel="manifest" href="ico\site.webmanifest">
     <!-- fontawesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
-
   </head>
   <body id="body">
     @@include('blockNavAndLoader.html')
@@ -21,7 +20,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-            <small><a href="#">Линейные уравнения</a></small>
+            <small><a href="theoreticalMaterial.html#ЛинейныеУравнения">Линейные уравнения</a></small>
             <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
             <p class="task__formula">$$(2a - 4)x = 3a + 1$$</p>
           </div>
@@ -60,7 +59,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 2</h2>
-            <small><a href="#">Линейные уравнения</a></small>
+            <small><a href="theoreticalMaterial.html#ЛинейныеУравнения">Линейные уравнения</a></small>
             <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
             <p class="task__formula">$$(a^2 - 2a + 1)x = a^2 + 2a - 3$$</p>
           </div>
@@ -122,7 +121,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
-            <small><a href="#">Исследование дискриминанта</a></small>
+            <small><a href="theoreticalMaterial.html#ИсследованиеДискриминанта">Исследование дискриминанта</a></small>
             <p class="task__text">При каких значениях параметра а уравнение 2 различных решения?</p>
             <p class="task__formula">$$ x^2 -ax + 16 = 0 $$</p>
           </div>
