--- a/easy.html
+++ b/easy.html
@@ -13,7 +13,6 @@
     <link rel="manifest" href="ico\site.webmanifest">
     <!-- fontawesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
-
   </head>
   <body id="body">
     <div id="preloaderOverlay" class="preloader--overlay">
@@ -39,11 +38,12 @@
   </div>
 </nav>
 
-      <section class="task">
+    <section class="content" >
+      <article class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-            <small><a href="#">Линейные уравнения</a></small>
+            <small><a href="theoreticalMaterial.html#ЛинейныеУравнения">Линейные уравнения</a></small>
             <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
             <p class="task__formula">$$(2a - 4)x = 3a + 1$$</p>
           </div>
@@ -77,12 +77,12 @@
             </p>
           </div>
         </div>
-      </section>
-      <section class="task">
+      </article>
+      <article class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 2</h2>
-            <small><a href="#">Линейные уравнения</a></small>
+            <small><a href="theoreticalMaterial.html#ЛинейныеУравнения">Линейные уравнения</a></small>
             <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
             <p class="task__formula">$$(a^2 - 2a + 1)x = a^2 + 2a - 3$$</p>
           </div>
@@ -114,37 +114,37 @@
               <p>раскладываем знаменатель</p>
               $$ a^2 + 2a -3 = 0 $$
               $$\begin{equation*}
-                 \begin{cases}
-                   a_1 + a_2 = -2
-                   \\
-                   a_1 * a_2 = -3
-                   \\
-                 \end{cases}
-                \end{equation*}
+              \begin{cases}
+              a_1 + a_2 = -2
+              \\
+              a_1 * a_2 = -3
+              \\
+              \end{cases}
+              \end{equation*}
               $$
               $$\begin{equation*}
-                 \begin{cases}
-                   a_1 = 1
-                   \\
-                    a_2 = -3
-                   \\
-                 \end{cases}
-                \end{equation*}
+              \begin{cases}
+              a_1 = 1
+              \\
+              a_2 = -3
+              \\
+              \end{cases}
+              \end{equation*}
               $$
               $$ a^2 + 2a -3 = (x - 1)(x + 3)  $$
               $$ x =  \frac{(a - 1)^2}{(x - 1)(x + 3)}$$
               $$ x =  \frac{(a - 1)}{(x + 3)}$$
-                $$Ответ: если \: a = 1, то \: x \in R;$$
-                $$ если \:a \neq 1, \: x =  \frac{(a - 1)}{(x + 3)} $$
+              $$Ответ: если \: a = 1, то \: x \in R;$$
+              $$ если \:a \neq 1, \: x =  \frac{(a - 1)}{(x + 3)} $$
             </p>
           </div>
         </div>
-      </section>
-      <section class="task">
+      </article>
+      <article class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
-            <small><a href="#">Исследование дискриминанта</a></small>
+            <small><a href="theoreticalMaterial.html#ИсследованиеДискриминанта">Исследование дискриминанта</a></small>
             <p class="task__text">При каких значениях параметра а уравнение 2 различных решения?</p>
             <p class="task__formula">$$ x^2 -ax + 16 = 0 $$</p>
           </div>
@@ -172,20 +172,21 @@
               $$D = a^2 - 64 > 0 $$
               $$D = a^2  > 64 $$
               $$\begin{equation*}
-                 \begin{cases}
-                  a \geq 8
-                   \\
-                   a < -8
-                   \\
-                 \end{cases}
-                \end{equation*}
+              \begin{cases}
+              a \geq 8
+              \\
+              a < -8
+              \\
+              \end{cases}
+              \end{equation*}
               $$
               <p>Ответ:  уравнение умеет  2  корня   при</p>
               $$   \:  a \in (-\infty ; -8 ) \cup ( 8; +\infty)  $$
             </p>
           </div>
         </div>
-      </section>
+      </article>
+    </section>
       <footer>
   <div class="footer__item">
     <h4>Разработка и дизайн сайта:</h4>
