--- a/hard.html
+++ b/hard.html
@@ -41,11 +41,12 @@
   </div>
 </nav>
 
-      <section class="task">
+    <section class="content">
+      <article class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-            <small><a href="#">модули</a></small>
+            <small><a href="theoreticalMaterial.html#Модуль">модуль</a></small>
             <p class="task__text">Найдите все значения параметра a, при каждом из которых уравнение имеет корни, но ни один из них не принадлежит интервалу (4; 19).</p>
             <p class="task__formula">$$ | x - a^2 + a + 2 | + | x - a^2 + 3a - 1 | = 2a - 3$$</p>
           </div>
@@ -80,67 +81,67 @@
               <p>Уравнение имеет корни, ни один из которых не принадлежит интервалу (4; 19) , только если правая граница отрезка решений не больше 4 или левая граница не меньше 19. Получаем</p>
               $$
               \begin{equation*}
-                 \begin{cases}
-                   a^2 - 3a + 1 \leq a^2 - a - 2 \\
-                   \left[
-                    \begin{array}{ccc}
-                       a^2 - a - 2 \leq 4 \\
-                       a^2 - 3a + 1 \leq 19 \\
-                    \end{array}
-                  \right.
-                 \end{cases}
-                \end{equation*}
+              \begin{cases}
+              a^2 - 3a + 1 \leq a^2 - a - 2 \\
+              \left[
+              \begin{array}{ccc}
+              a^2 - a - 2 \leq 4 \\
+              a^2 - 3a + 1 \leq 19 \\
+              \end{array}
+              \right.
+              \end{cases}
+              \end{equation*}
               $$
               $$
               \begin{equation*}
-                 \begin{cases}
-                  2a \geq  3\\
-                   \left[
-                    \begin{array}{ccc}
-                       a^2 - a - 6 \leq 0 \\
-                       a^2 - 3a -18 \geq 0 \\
-                    \end{array}
-                  \right.
-                 \end{cases}
-                \end{equation*}
+              \begin{cases}
+              2a \geq  3\\
+              \left[
+              \begin{array}{ccc}
+              a^2 - a - 6 \leq 0 \\
+              a^2 - 3a -18 \geq 0 \\
+              \end{array}
+              \right.
+              \end{cases}
+              \end{equation*}
               $$
               $$
               \begin{equation*}
-                 \begin{cases}
-                  a \geq  1.5\\
-                   \left[
-                    \begin{array}{ccc}
-                      (a - 3)( a + 3 ) \leq 0 \\
-                      (a - 6)( a + 3 ) \geq 0 \\
-                    \end{array}
-                  \right.
-                 \end{cases}
-                \end{equation*}
+              \begin{cases}
+              a \geq  1.5\\
+              \left[
+              \begin{array}{ccc}
+              (a - 3)( a + 3 ) \leq 0 \\
+              (a - 6)( a + 3 ) \geq 0 \\
+              \end{array}
+              \right.
+              \end{cases}
+              \end{equation*}
               $$
               $$
               \begin{equation*}
-                 \begin{cases}
-                  a \geq  1.5\\
-                   \left[
-                    \begin{array}{ccc}
-                      a \leq -3 \\
-                      -2 \leq a \leq 3 \\
-                      a \geq 6 \\
-                    \end{array}
-                  \right.
-                 \end{cases}
-                \end{equation*}
+              \begin{cases}
+              a \geq  1.5\\
+              \left[
+              \begin{array}{ccc}
+              a \leq -3 \\
+              -2 \leq a \leq 3 \\
+              a \geq 6 \\
+              \end{array}
+              \right.
+              \end{cases}
+              \end{equation*}
               $$
               <p>Ответ: \( a \in  [1, 5; 3] \cup [6; + \infty] \)</p>
             </p>
           </div>
         </div>
-      </section>
-      <section class="task">
+      </article>
+      <article class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 2</h2>
-            <small><a href="#">модули</a></small>
+            <small><a href="theoreticalMaterial.html#Модуль">модуль</a></small>
             <p class="task__text">Найдите все значения a, при каждом из которых уравнение на промежутке \( (-1; +\infty) \) имеет больше двух корней.</p>
             <p class="task__formula">$$ \left| \frac{5}{x-1} - 3 \right| = ax + a - 2 $$</p>
           </div>
@@ -178,12 +179,12 @@
             </p>
           </div>
         </div>
-      </section>
-      <section class="task">
+      </article>
+      <article class="task">
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
-            <small><a href="#">грифический метод</a></small>
+            <small><a href="theoreticalMaterial.html#ГрафическийМетод">грифический метод</a></small>
             <p class="task__text">При каких a уравнение имеет ровно три корня?</p>
             <p class="task__formula">$$ | x^2 - 2x - 3 | -2a = | x - a | - 1 $$</p>
           </div>
@@ -217,7 +218,9 @@
             </p>
           </div>
         </div>
-      </section>
+      </article>
+
+    </section>
       <footer>
   <div class="footer__item">
     <h4>Разработка и дизайн сайта:</h4>
